objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>This field contains the Constituent ID value for a contact record. This field is only applicable to historic migrated data from VSA&apos;s deprecated CRM system, The Raiser&apos;s Edge. If the field is blank it means the contact record wasn&apos;t migrated from The Raiser&apos;s Edge (VSA-10).</description>
        <externalId>true</externalId>
        <inlineHelpText>Constituent ID from The Raiser&apos;s Edge (deprecated system).</inlineHelpText>
        <label>Constituent ID</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Consent_Expiration_Date__c</fullName>
        <description>This field contains the expiration date for the contact&apos;s email consent statement. The formula adds two years to the Email Consent Updated Date, and takes leap year into account (VSA-9).</description>
        <formula>IF( 
AND( 
MONTH( Email_Consent_Updated_Date__c ) = 2, 
DAY( Email_Consent_Updated_Date__c ) = 29 
), 
DATE( 
YEAR(Email_Consent_Updated_Date__c )+2, 
3, 
1), 
DATE( 
YEAR(Email_Consent_Updated_Date__c )+2, 
MONTH(Email_Consent_Updated_Date__c ), 
DAY(Email_Consent_Updated_Date__c ) 
) 
)</formula>
        <inlineHelpText>Automatically calculated based on Email Consent Updated Date.</inlineHelpText>
        <label>Email Consent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Consent_Purposes__c</fullName>
        <description>This field contains the purposes which the contact has agreed to be contacted for via the email channel (VSA-9).</description>
        <label>Email Consent Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Purpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Consent_Source__c</fullName>
        <description>This field contains the source of the contact&apos;s consent declaration, i.e., the means by which the consent declaration was delivered (VSA-9).</description>
        <inlineHelpText>Please choose how the consent declaration was obtained, e.g., in a phone call or via an email.</inlineHelpText>
        <label>Email Consent Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Consent_Status__c</fullName>
        <description>This field contains the contact&apos;s consent declaration for the email channel (VSA-9).</description>
        <label>Email Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Consent_Updated_Date__c</fullName>
        <description>This field contains the date the contact&apos;s consent was last updated (VSA-9).</description>
        <inlineHelpText>Please update this date when updating the contact&apos;s consent declaration.</inlineHelpText>
        <label>Email Consent Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>This field contains the name of this contact&apos;s emergency contact, typically next of kin or similar. VSA opted to not store these records as contacts (using look-up) because they may not have the emergency contact&apos;s consent to store the data in a structured fashion (VSA-4).</description>
        <label>Emergency Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>This field contains the phone number for this contact&apos;s emergency contact, typically next of kin or similar. VSA opted to not store this as an attribute on a contact record (using look-up) because they may not have the emergency contact&apos;s consent to store the data in a structured fashion (VSA-4).</description>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Notes__c</fullName>
        <description>This field details any relevant medical information for this contact which is pertinent for any events they may undertake (VSA-4).</description>
        <label>Medical Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Consent_Expiration_Date__c</fullName>
        <description>This field contains the expiration date for the contact&apos;s email consent statement. The formula adds two years to the Phone Consent Updated Date, and takes leap year into account (VSA-9).</description>
        <formula>IF( 
AND( 
MONTH( Phone_Consent_Updated_Date__c ) = 2, 
DAY( Phone_Consent_Updated_Date__c ) = 29 
), 
DATE( 
YEAR(Phone_Consent_Updated_Date__c )+2, 
3, 
1), 
DATE( 
YEAR(Phone_Consent_Updated_Date__c )+2, 
MONTH(Phone_Consent_Updated_Date__c ), 
DAY(Phone_Consent_Updated_Date__c ) 
) 
)</formula>
        <inlineHelpText>Automatically calculated based on Phone Consent Updated Date.</inlineHelpText>
        <label>Phone Consent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Consent_Purposes__c</fullName>
        <description>This field contains the purposes which the contact has agreed to be contacted for via the phone channel (VSA-9).</description>
        <label>Phone Consent Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Purpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Consent_Source__c</fullName>
        <description>This field contains the source of the contact&apos;s consent declaration, i.e., the means by which the consent declaration was delivered (VSA-9).</description>
        <inlineHelpText>Please choose how the consent declaration was obtained, e.g., in a phone call or via an email.</inlineHelpText>
        <label>Phone Consent Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Consent_Status__c</fullName>
        <description>This field contains the contact&apos;s consent declaration for the phone channel (VSA-9).</description>
        <label>Phone Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Consent_Updated_Date__c</fullName>
        <description>This field contains the date the contact&apos;s consent was last updated (VSA-9).</description>
        <inlineHelpText>Please update this date when updating the contact&apos;s consent declaration.</inlineHelpText>
        <label>Phone Consent Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postal_Consent_Expiration_Date__c</fullName>
        <description>This field contains the expiration date for the contact&apos;s postal consent statement. The formula adds two years to the Postal Consent Updated Date, and takes leap year into account (VSA-9).</description>
        <formula>IF( 
AND( 
MONTH( Postal_Consent_Updated_Date__c ) = 2, 
DAY( Postal_Consent_Updated_Date__c ) = 29 
), 
DATE( 
YEAR(Postal_Consent_Updated_Date__c )+2, 
3, 
1), 
DATE( 
YEAR(Postal_Consent_Updated_Date__c )+2, 
MONTH(Postal_Consent_Updated_Date__c ), 
DAY(Postal_Consent_Updated_Date__c ) 
) 
)</formula>
        <inlineHelpText>Automatically calculated based on Postal Consent Updated Date.</inlineHelpText>
        <label>Postal Consent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postal_Consent_Purposes__c</fullName>
        <description>This field contains the purposes which the contact has agreed to be contacted for via the postal channel (VSA-9).</description>
        <label>Postal Consent Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Purpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Consent_Source__c</fullName>
        <description>This field contains the source of the contact&apos;s consent declaration, i.e., the means by which the consent declaration was delivered (VSA-9).</description>
        <inlineHelpText>Please choose how the consent declaration was obtained, e.g., in a phone call or via an email.</inlineHelpText>
        <label>Postal Consent Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Consent_Status__c</fullName>
        <description>This field contains the contact&apos;s consent declaration for the postal channel (VSA-9).</description>
        <label>Postal Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Consent_Updated_Date__c</fullName>
        <description>This field contains the date the contact&apos;s consent was last updated (VSA-9).</description>
        <inlineHelpText>Please update this date when updating the contact&apos;s consent declaration.</inlineHelpText>
        <label>Postal Consent Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to restrict contacts so that they are not visible to all users except those allowed to by the Sharing Rules.</description>
        <inlineHelpText>This field is used to restrict contacts so that they are not visible to all users except those allowed to by the Sharing Rules</inlineHelpText>
        <label>Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Consent_Expiration_Date__c</fullName>
        <description>This field contains the expiration date for the contact&apos;s email consent statement. The formula adds two years to the SMS Consent Updated Date, and takes leap year into account (VSA-9).</description>
        <formula>IF( 
AND( 
MONTH( SMS_Consent_Updated_Date__c ) = 2, 
DAY( SMS_Consent_Updated_Date__c ) = 29 
), 
DATE( 
YEAR(SMS_Consent_Updated_Date__c )+2, 
3, 
1), 
DATE( 
YEAR(SMS_Consent_Updated_Date__c )+2, 
MONTH(SMS_Consent_Updated_Date__c ), 
DAY(SMS_Consent_Updated_Date__c ) 
) 
)</formula>
        <inlineHelpText>Automatically calculated based on SMS Consent Updated Date.</inlineHelpText>
        <label>SMS Consent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMS_Consent_Purposes__c</fullName>
        <description>This field contains the purposes which the contact has agreed to be contacted for via the SMS channel (VSA-9).</description>
        <label>SMS Consent Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Purpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Consent_Source__c</fullName>
        <description>This field contains the source of the contact&apos;s consent declaration, i.e., the means by which the consent declaration was delivered (VSA-9).</description>
        <inlineHelpText>Please choose how the consent declaration was obtained, e.g., in a phone call or via an email.</inlineHelpText>
        <label>SMS Consent Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Consent_Status__c</fullName>
        <description>This field contains the contact&apos;s consent declaration for the SMS channel (VSA-9).</description>
        <label>SMS Consent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Consent_Updated_Date__c</fullName>
        <description>This field contains the date the contact&apos;s consent was last updated (VSA-9).</description>
        <inlineHelpText>Please update this date when updating the contact&apos;s consent declaration.</inlineHelpText>
        <label>SMS Consent Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <description>This field returns TODAY&apos;S DATE. It is used as input for Today_Date_as_Text, which in turn is used in a mail merge document template to stamp the document with today&apos;s date (VSA-29).</description>
        <formula>TODAY()</formula>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_Date_as_Text__c</fullName>
        <description>This field returns TODAY&apos;S DATE in a text format. It is used in a mail merge template (VSA-29).</description>
        <formula>IF( 
ISBLANK( Today_Date__c ), 
NULL, 
( 
TEXT(DAY( Today_Date__c ))&amp; 
CASE( 
DAY( Today_Date__c ), 
1, &apos;st&apos;, 
2, &apos;nd&apos;, 
3, &apos;rd&apos;, 
21,&apos;st&apos;, 
22,&apos;nd&apos;, 
23,&apos;rd&apos;, 
31,&apos;st&apos;, 
&apos;th&apos; 

)&amp;&apos; &apos;&amp; 
CASE( 
MONTH( Today_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot; 
)&amp;&apos; &apos;&amp; 
TEXT(YEAR( Today_Date__c )) 
) 
)</formula>
        <label>Today&apos;s Date as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Reference_Number__c</fullName>
        <description>This field contains an auto-generated unique reference number in a linear sequence (VSA-4).</description>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>Unique Reference Number.</inlineHelpText>
        <label>URN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>VSA_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to FALSE by default. If set to TRUE, it indicates that this contact is a member of VSA staff. This checkbox is updated manually, i.e., there are no automated actions which updates this field (VSA-4).</description>
        <label>VSA Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSA_Trustee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to FALSE by default. If set to TRUE, it indicates that this contact is a VSA trustee. This checkbox is updated manually, i.e., there are no automated actions which updates this field (VSA-4).</description>
        <label>VSA Trustee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_Consent_Supersedes_Existing_Consent__c</fullName>
        <description>Please refer to the formula explanation directly in the formula field (Giveclarity case #4254).</description>
        <formula>OR(  
   IF ( 
      AND(
        NOT ( ISBLANK ( cc_Last_Updated_by_Charity_Checkout__c )),
        ISBLANK ( Postal_Consent_Updated_Date__c ) ,
        ISBLANK ( Email_Consent_Updated_Date__c ) ,
        ISBLANK ( Phone_Consent_Updated_Date__c ) ,
        ISBLANK ( SMS_Consent_Updated_Date__c )
         ),
     TRUE,
     FALSE
   ),

/*Explanation for the statement above: if there is a date in the cc_Last_Updated_by_Charity_Checkout field, and all the consent updated dates on the contact record are blank, return TRUE.*/

   IF ( 
     OR (
         DATEVALUE ( cc_Last_Updated_by_Charity_Checkout__c ) &gt; Postal_Consent_Updated_Date__c ,
         DATEVALUE ( cc_Last_Updated_by_Charity_Checkout__c ) &gt; Email_Consent_Updated_Date__c ,
         DATEVALUE ( cc_Last_Updated_by_Charity_Checkout__c ) &gt; Phone_Consent_Updated_Date__c ,
         DATEVALUE ( cc_Last_Updated_by_Charity_Checkout__c ) &gt; SMS_Consent_Updated_Date__c 
         ),
     TRUE,
     FALSE
   )

/*Explanation for the statement above: if the date in the cc_Last_Updated_by_Charity_Checkout field is more recent than any of the consent updated dates on the contact record, return TRUE.*/

)



/*This formula returns TRUE, if either of the following statements are true:
    
     1) There is a date in the cc_Last_Updated_by_Charity_Checkout field, and all the consent updated dates on the contact record are blank
     2) The date in the cc_Last_Updated_by_Charity_Checkout field is more recent than any of the consent updated dates on the contact record.

If number 1 is the case, it indicates that there may be some consent information collected in Charity Checkout which hasn&apos;t been applied to the consent fields directly in Salesforce.

If number 2 is the case, it indicates that there may be some consent information collected in Charity Checkout which might be more recent than the consent declarations captured in the consent fields directly in Salesforce.

This information is used in a report to bring the potential discrepancy to light, and allow VSA to manually verify whether the consent information collected in Charity Checkout is in fact more recent than what is currently stored in Salesforce (Giveclarity case #4254).*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If ticked, it means that the date in the Last Updated by Charity Checkout field is more recent than any of the consent updated dates on the contact. Please verify the consent information under the &quot;Consent&quot; tab.</inlineHelpText>
        <label>Last Updated CC Supersedes Consent Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_CreatedOrUpdated_by_Charity_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox can be set to TRUE if the contact has been created or updated by Charity Checkout. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Created/Updated by Charity Checkout (CC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_Last_Updated_by_Charity_Checkout__c</fullName>
        <description>This field contains the date/time for when the contact record was last updated by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (Giveclarity case #4254).</description>
        <inlineHelpText>The date/time for when the contact record was last updated by Charity Checkout.</inlineHelpText>
        <label>Last Updated by Charity Checkout (CC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cc_PF_Reference__c</fullName>
        <description>This field contains an un-formatted string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <externalId>true</externalId>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>PF Reference (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_PF_URL__c</fullName>
        <description>This field contains data which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Data from Charity Checkout.</inlineHelpText>
        <label>PF URL (CC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_User_Fields__c</fullName>
        <description>This field contains an un-formatted concatenated string of data which is provided by Charity Checkout (CC). The content of this field comes across un-formatted due to a lack of proper formatting by CC. At the time of implementation, CC is not able to split the field values into separate fields. VSA has accepted this. The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <inlineHelpText>Un-formatted data from Charity Checkout.</inlineHelpText>
        <label>User Fields (CC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Consent_Must_Have_Purposes</fullName>
        <active>true</active>
        <description>Purposes must be selected when Consent Status is set to &quot;Consent Given&quot;. This validation rule is triggered if Consent Status is set to &quot;Consent Given&quot;, but no Purposes have been selected for that channel (VSA-9).</description>
        <errorConditionFormula>$Setup.Process_Control__c.Contact_Validation__c = TRUE &amp;&amp;
OR( 
( 
ISPICKVAL( Postal_Consent_Status__c , &quot;Consent Given&quot;) &amp;&amp; 
(ISBLANK( Postal_Consent_Purposes__c ))), 
( 
ISPICKVAL( Email_Consent_Status__c , &quot;Consent Given&quot;) &amp;&amp; 
(ISBLANK( Email_Consent_Purposes__c ))), 
( 
ISPICKVAL( Phone_Consent_Status__c , &quot;Consent Given&quot;) &amp;&amp; 
(ISBLANK( Phone_Consent_Purposes__c ))), 
( 
ISPICKVAL( SMS_Consent_Status__c , &quot;Consent Given&quot;) &amp;&amp; 
(ISBLANK( SMS_Consent_Purposes__c )))
)</errorConditionFormula>
        <errorMessage>Please specify the purposes which the contact is consenting to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consent_Status_Update_Must_Update_Date</fullName>
        <active>true</active>
        <description>This validation rule is triggered if the Consent Status for any channel is updated but the Consent Updated value for that channel is not updated.</description>
        <errorConditionFormula>$Setup.Process_Control__c.Contact_Validation__c = TRUE &amp;&amp;

OR( 
   ( 
    ISCHANGED ( Postal_Consent_Status__c ) &amp;&amp; 
    NOT( ISCHANGED ( Postal_Consent_Updated_Date__c ))),
   ( 
    ISCHANGED ( Email_Consent_Status__c ) &amp;&amp; 
    NOT( ISCHANGED ( Email_Consent_Updated_Date__c ))),
   ( 
    ISCHANGED ( Phone_Consent_Status__c ) &amp;&amp; 
    NOT( ISCHANGED ( Phone_Consent_Updated_Date__c ))),
   ( 
    ISCHANGED ( SMS_Consent_Status__c ) &amp;&amp; 
    NOT( ISCHANGED ( SMS_Consent_Updated_Date__c )))
)</errorConditionFormula>
        <errorMessage>When Consent Status is updated you must update the Consent Updated Date. Please ensure to update the Consent Updated Date for all relevant channels.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consent_Updated_Date_Cannot_Be_Future</fullName>
        <active>true</active>
        <description>Consent Updated Date for any channel cannot be a future date. This validation rule is triggered if a future date is inserted into any of the Consent Updated Date field.</description>
        <errorConditionFormula>$Setup.Process_Control__c.Contact_Validation__c = TRUE &amp;&amp; 

OR(
    Postal_Consent_Updated_Date__c &gt; TODAY(),
    Email_Consent_Updated_Date__c &gt; TODAY(),
    Phone_Consent_Updated_Date__c &gt; TODAY(),
    SMS_Consent_Updated_Date__c &gt; TODAY()
  )</errorConditionFormula>
        <errorMessage>A Consent Updated Date cannot be a future date. Please correct to today&apos;s date or a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,&quot;&quot;),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Consent_Must_Have_No_Purposes</fullName>
        <active>true</active>
        <description>This validation rule is triggered if the Consent Status for any channel is set to &quot;No Consent&quot;, and the Consent Purposes field has a value. If there is no consent for the channel, there should not be any purposes specified for that channel.</description>
        <errorConditionFormula>$Setup.Process_Control__c.Contact_Validation__c &amp;&amp;

OR(
   (
   ISPICKVAL(  Postal_Consent_Status__c , &quot;No Consent&quot;) &amp;&amp;
   NOT(ISBLANK( Postal_Consent_Purposes__c ))),
   (
   ISPICKVAL( Email_Consent_Status__c , &quot;No Consent&quot;) &amp;&amp;
   NOT(ISBLANK( Email_Consent_Purposes__c ))),
   (
   ISPICKVAL( Phone_Consent_Status__c , &quot;No Consent&quot;) &amp;&amp;
   NOT(ISBLANK( Phone_Consent_Purposes__c ))),
   (
   ISPICKVAL( SMS_Consent_Status__c , &quot;No Consent&quot;) &amp;&amp;
   NOT(ISBLANK( SMS_Consent_Purposes__c )))
)</errorConditionFormula>
        <errorMessage>Purposes are not applicable if consent has not been given. Please check all &apos;Consent Status&apos; and &apos;Consent Purposes&apos; combinations, and update if relevant.</errorMessage>
    </validationRules>
</CustomObject>